src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Account_Priority__c</fullName>
        <formula>Account.Target_Priority__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Priority</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Alternative_Email_2__c</fullName>
        <label>Alternative Email 2</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Alternative_Email__c</fullName>
        <description>A second e-mail for a record that may not be their primary e-mail.</description>
        <label>Alternative Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Birthdate_Custom__c</fullName>
        <label>Birthdate (Custom)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Degree_of_Separation__c</fullName>
        <label>Degree of Separation</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Department_Custom__c</fullName>
        <label>Department (Custom)</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Extension__c</fullName>
        <label>Extension</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Home_City__c</fullName>
        <label>Home City</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Home_Phone_Custom__c</fullName>
        <label>Home Phone (Custom)</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Home_Postal_Zip_Code__c</fullName>
        <label>Home Postal Zip Code</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Home_State__c</fullName>
        <label>Home State</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Home_Street__c</fullName>
        <label>Home Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ID18Digit__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ID18Digit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>I_t_contacts__c</fullName>
        <formula>Account.Line_of_Business__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>I/t contacts</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KIDS_Client_ID__c</fullName>
        <description>This contacts unique KIDS Client ID</description>
        <inlineHelpText>This contacts unique KIDS Client ID</inlineHelpText>
        <label>KIDS Client ID</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Line_of_Business__c</fullName>
        <formula>Account.Line_of_Business__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Line of Business</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_LinkedIn_Contacts__c</fullName>
        <label>Number of LinkedIn Contacts</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Position_role__c</fullName>
        <label>Position/role</label>
        <picklist>
            <picklistValues>
                <fullName>Executive -- middle manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Executive -- upper</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operations/technical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales/Business Dev</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Self-employed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Prediction_Likelihood_of_Response__c</fullName>
        <label>Prediction -- Likelihood of Response</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DK</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Primary_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reason_for_Prediction__c</fullName>
        <label>Reason for Prediction</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Spouse_c__c</fullName>
        <label>Spouse__c</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Targeted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Active</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Test__c</fullName>
        <label>Test</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>CONTACT.RECORDTYPE</columns>
        <columns>CONTACT.FIRST_NAME</columns>
        <columns>CONTACT.LAST_NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
        <language>en_US</language>
        <sharedTo>
            <group>I_T_Group</group>
            <group>WIN_Staff</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.BIRTHDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>EIC_Contacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>CONTACT.RECORDTYPE</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.EIC_Training</value>
        </filters>
        <label>EIC Contacts</label>
        <language>en_US</language>
        <sharedTo>
            <group>I_T_Group</group>
            <group>WIN_Staff</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EIC_Contacts_Priority_1</fullName>
        <columns>FULL_NAME</columns>
        <columns>CONTACT.RECORDTYPE</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Account_Priority__c</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account_Priority__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>EIC Contacts Priority 1</label>
        <language>en_US</language>
        <sharedTo>
            <group>I_T_Group</group>
            <group>WIN_Staff</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Contacts_Created_This_Month</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>greaterThan</operation>
            <value>8/1/2012 12:00 AM</value>
        </filters>
        <label>My Contacts Created This Month</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>Sept_LinkedIn</fullName>
        <columns>FULL_NAME</columns>
        <columns>CONTACT.RECORDTYPE</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>Position_role__c</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>Prediction_Likelihood_of_Response__c</columns>
        <columns>Reason_for_Prediction__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>Sept LinkedIn</label>
        <language>en_US</language>
        <sharedTo>
            <group>I_T_Group</group>
            <group>WIN_Staff</group>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>EIC_Training</fullName>
        <active>true</active>
        <description>EIC Training Contacts</description>
        <label>EIC Training</label>
    </recordTypes>
    <recordTypes>
        <fullName>WIN_Contact</fullName>
        <active>true</active>
        <label>WIN Contact</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>